更新 .gitignore 文件以忽略 *.code-workspace 和 *.jar 文件；在 Database 类中添加数据库路径检查以确保目录存在；更新 Main 类中的帮助信息格式。