@@ -71,3 +71,20 @@ CREATE TABLE "torrent" (
     PRIMARY KEY ("TOR_HASH" DESC)
 );
 ```
+
+## 使用说明
+
+"""txt
+Usage:
+    java -jar TorrentBank.jar <command> [options]                       - 导入或导出 BT_backup 文件到数据库
+
+command:
+    import <BT_backup Dir> [--db <Database Path>]                        -导入指定目录下的 BT_backup 文件到数据库，默认数据库路径为当前目录下的 torrent_bank.db
+    export <qBittorrent Category> <Export Dir> [--db <Database Path>]   - 导出指定 qBittorrent 分类的 torrent 和 fastresume 文件到指定目录，默认数据库路径为当前目录下的 torrent_bank.db
+"""
+
+### 使用例
+
+```bash
+java --enable-native-access=ALL-UNNAMED -jar TorrentBank.jar import "C:\Users\kuuhaku\AppData\Local\qBittorrent\BT_backup" --db "D:\OneDrive\db\torrent\torrent_bank.db"
+```
